--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>kick</module>
         <module>bunllect</module>
+        <module>bunflux</module>
     </modules>
     <packaging>pom</packaging>
 
