--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,7 @@
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
-            <version>LATEST</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-proxy</artifactId>
-            <version>LATEST</version>
+            <version>1.10-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
