--- a/pom.xml
+++ b/pom.xml
@@ -9,25 +9,27 @@
         <module>bunllect</module>
         <module>bunflux</module>
         <module>serverlist</module>
+        <module>agent</module>
     </modules>
     <packaging>pom</packaging>
 
     <repositories>
         <repository>
-            <id>ci-mengcraft</id>
-            <url>http://ci.mengcraft.com:8080/plugin/repository/everything/</url>
+            <id>repo-bungee</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
         <repository>
-            <id>repo-md-5</id>
-            <url>http://repo.md-5.net/content/repositories/public/</url>
+            <id>ci-mengcraft</id>
+            <url>http://ci.mengcraft.com:8080/plugin/repository/everything</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>io.github.waterfallmc</groupId>
-            <artifactId>waterfall-proxy</artifactId>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-proxy</artifactId>
             <version>1.10-SNAPSHOT</version>
+            <type>jar</type>
             <scope>provided</scope>
         </dependency>
     </dependencies>
