--- a/stat/pom.xml
+++ b/stat/pom.xml
@@ -5,5 +5,5 @@
         <groupId>com.mengcraft</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>serverlist</artifactId>
+    <artifactId>stat</artifactId>
 </project>
