--- a/bunllect/pom.xml
+++ b/bunllect/pom.xml
@@ -9,5 +9,32 @@
 
     <artifactId>bunllect</artifactId>
 
+    <repositories>
+        <repository>
+            <id>repo-placeholder</id>
+            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.7.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mengcraft</groupId>
+            <artifactId>simpleorm</artifactId>
+            <version>0.3.3</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
