--- a/bunllect/src/main/resources/bunllect.conf
+++ b/bunllect/src/main/resources/bunllect.conf
@@ -2,3 +2,5 @@ bunllect.jdbc.driver=com.mysql.jdbc.Driver
 bunllect.jdbc.url=jdbc:mysql://127.0.0.1/bunllect
 bunllect.jdbc.user=root
 bunllect.jdbc.password=wowsuchpassword
+bunllect.online.period=5
+bunllect.online.throttle=20
