--- a/bungeelistd/pom.xml
+++ b/bungeelistd/pom.xml
@@ -6,4 +6,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>bungeelistd</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
