--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,6 @@
 
     <repositories>
         <repository>
-            <id>repo-bungee</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-        <repository>
             <id>ci-mengcraft</id>
             <url>http://ci.mengcraft.com:8080/plugin/repository/everything</url>
         </repository>
@@ -31,13 +27,13 @@
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-proxy</artifactId>
-            <version>1.10-SNAPSHOT</version>
+            <version>1.12-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>[1.16.14,)</version>
+            <version>1.16.18</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
