[lobbybalancer] Use multi bungee mode by default and update Zone.java

--- a/lobbybalancer/src/main/resources/config.json
+++ b/lobbybalancer/src/main/resources/config.json
@@ -3,7 +3,8 @@
     "lobby-\\w+"
   ],
   "mapping": {
-    "lobby": "lobby-1"
+    "lobby": "lobby-1",
+    "hub": "lobby-1"
   },
-  "multi_bungee": false
+  "multi_bungee": true
 }
